# apps/api/openapi/openapi.json
@@ -41,6 +41,12 @@
               {
                 "type": "string",
                 "enum": [
+                  "starting"
+                ]
+              },
+              {
+                "type": "string",
+                "enum": [
                   "running"
                 ]
               },
@@ -129,6 +135,12 @@
                 "type": "string",
                 "enum": [
                   "create"
+                ]
+              },
+              {
+                "type": "string",
+                "enum": [
+                  "start"
                 ]
               },
               {
@@ -357,6 +369,32 @@
         }
       },
       "delete": {
+        "parameters": [
+          {
+            "schema": {
+              "type": "string"
+            },
+            "in": "path",
+            "name": "boxId",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/def-1"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/boxes/{boxId}/start": {
+      "post": {
         "parameters": [
           {
             "schema": {
